# laboratorio3_kedro

./: README.md  pyproject.toml  sonar-project.properties  ver_hist.py
.github/: workflows
.github/workflows/: main.yml
conf/base/: catalog.yml  parameters.yml
src/laboratorio3_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/laboratorio3_kedro/pipelines/histogram/: __init__.py  analyzer.py  nodes.py  pipeline.py
tests/: test_analyzer.py
